# duck-prompt

./: .env  .gitignore  .windsurfrules  CLAUDE.md  DuckPrompt.spec  PRD.md  README.md  app.py  app_amd64.spec  app_arm64.spec  build.bat  config.py  custom_text_edit.py  file_explorer.py  list_ssh_home.py  main.py  main_controller.py  main_window.py  parse_xml_string.py  prompt_manager.py  pyproject.toml  pytest_results.txt  qt.conf  requirements-dev.txt  requirements.txt  state_manager.py  system_prompt_controller.py  tab_manager.py  template_manager.py  utils.py  your_script_name.py  ㅇㅇㅇ.xml  프롬프트.txt
.claude/: settings.local.json
docs/: DB docs.md  Database Schema Definitions.md  Diff-match-patch(DMP) 코드 수정 방법.md  FAH_ARCHITECTURE.md  FAH_MIGRATION_COMPLETE.md  Feature‑Atomic Hybrid(FAH) + Sub-Bus Structure.md  Gemini JSON schema docs.md  LLM 을 위한 코드 구조.md  duck_agent_2025-04-25_112248.sql  duck_agent_2025-04-25_121306.sql  duck_agent_2025-04-26_214519.sql  google_ai_docs.md  ssh_docs.md  ssh_개발단계.md
docs/AsyncSSH/: AsyncSSH_API_docs.md  AsyncSSH_docs.md
docs/PRD(Product Requirement Document)/: PRD_db.md  전체 PRD.md  파일별 기능 상세.md
docs/PyQt6/: designer.md  gotchas.md  index.md  introduction.md  metaobjects.md  multiinheritance.md  pickle.md  pyqt5_differences.md  pyqt_qsettings.md  pyqt_qvariant.md  python_shell.md  qml.md  qt_interfaces.md  qt_properties.md  signals_slots.md
docs/ReferenceDocs/: Google Gen AI SDK.md  gemini flash thinking model sample.py.txt  py-silero-vad-lite docs.md  개발전 PRD 작성가이드.md
docs/langgraph/: langchain_ai_github_io_langgraph.md  langchain_ai_github_io_langgraph_agents_context.md  langchain_ai_github_io_langgraph_agents_context_169.md  langchain_ai_github_io_langgraph_agents_deployment.md  langchain_ai_github_io_langgraph_agents_memory.md  langchain_ai_github_io_langgraph_agents_models.md  langchain_ai_github_io_langgraph_agents_prebuilt.md  langchain_ai_github_io_langgraph_agents_run_agents.md  langchain_ai_github_io_langgraph_agents_tools.md  langchain_ai_github_io_langgraph_agents_ui.md  langchain_ai_github_io_langgraph_concepts_agentic_concepts.md  langchain_ai_github_io_langgraph_concepts_assistants.md  langchain_ai_github_io_langgraph_concepts_auth.md  langchain_ai_github_io_langgraph_concepts_functional_api.md  langchain_ai_github_io_langgraph_concepts_high_level.md  langchain_ai_github_io_langgraph_concepts_langgraph_cli.md  langchain_ai_github_io_langgraph_concepts_langgraph_cloud.md  langchain_ai_github_io_langgraph_concepts_langgraph_self_hosted_data_plane.md  langchain_ai_github_io_langgraph_concepts_langgraph_self_hosted_data_plane_39.md  langchain_ai_github_io_langgraph_concepts_langgraph_studio.md  langchain_ai_github_io_langgraph_concepts_scalability_and_resilience.md  langchain_ai_github_io_langgraph_concepts_self_hosted.md  langchain_ai_github_io_langgraph_concepts_template_applications.md  langchain_ai_github_io_langgraph_concepts_template_applications_167.md  langchain_ai_github_io_langgraph_concepts_time_travel.md  langchain_ai_github_io_langgraph_concepts_time_travel_140.md  langchain_ai_github_io_langgraph_concepts_v0_human_in_the_loop.md  langchain_ai_github_io_langgraph_how_tos_async.md  langchain_ai_github_io_langgraph_how_tos_auth_custom_auth.md  langchain_ai_github_io_langgraph_how_tos_auth_openapi_security.md  langchain_ai_github_io_langgraph_how_tos_autogen_integration.md  langchain_ai_github_io_langgraph_how_tos_autogen_integration_functional.md  langchain_ai_github_io_langgraph_how_tos_autogen_integration_functional_163.md  langchain_ai_github_io_langgraph_how_tos_autogen_langgraph_platform.md  langchain_ai_github_io_langgraph_how_tos_branching.md  langchain_ai_github_io_langgraph_how_tos_command.md  langchain_ai_github_io_langgraph_how_tos_configuration.md  langchain_ai_github_io_langgraph_how_tos_create_react_agent.md  langchain_ai_github_io_langgraph_how_tos_create_react_agent_memory.md  langchain_ai_github_io_langgraph_how_tos_create_react_agent_system_prompt.md  (+54 more)
docs/subtasks/: task_1.md
docs/리팩토링/: langgraph_개발가이드.md  unified-diff_en.md  계획.md  네트워크 드라이브 개선_캐싱 및 watchdog 사용.md  프로그램 재개발.md
resources/prompts/system/: Python_Prompt_Guide.md  XML_Prompt_Guide.md  XML_Prompt_Guide_Python.md  XML_prompt_guide_python_en.md  bux_fixer.md  code_generater.md  code_generator.md  dmp_prompt_guide.md  json_prompt_guide_python_en.md  json_prompt_guide_python_kr.md  xml_prompt_guide_python_kr.md
resources/prompts/user/: mp_code_review.md  mp_code_review_input.md  mp_script_to_blog_input.md  mp_template.md
resources/status/: asd.json  default.json
src/: app.py  config.yml
src/core/: __init__.py  langgraph_state.py
src/core/pydantic_models/: __init__.py  app_state.py  config_settings.py  ssh_config.py
src/core/services/: __init__.py  config_service.py  db_service.py  directory_cache_service.py  filesystem_service.py  gemini_service.py  prompt_service.py  ssh_config_service.py  state_service.py  template_service.py  token_service.py  xml_service.py
src/features/config/: commands.py  handlers.py
src/features/database/: commands.py  handlers.py
src/features/dmp_processor/: commands.py  handlers.py
src/features/file_management/: commands.py  handlers.py
src/features/prompt_builder/: commands.py  handlers.py
src/features/tokens/: commands.py  handlers.py
src/gateway/: __init__.py
src/gateway/bus/: _base.py  config_command_bus.py  database_command_bus.py  dmp_processor_command_bus.py  event_bus.py  file_management_command_bus.py  prompt_builder_command_bus.py  service_locator.py  tokens_command_bus.py
src/shared/atoms/: file_utils.py  logger.py  (+1 more)
src/ui/: __init__.py  main_window.py  main_window_setup_signals.py  main_window_setup_ui.py  settings_dialog.py
src/utils/: __init__.py  db_migration_script.py  helpers.py  notifications.py  postgres_db_initializer.py  postgres_db_works.py
tests/: __init__.py
tests/core/: __init__.py
tests/stage_01_ssh_backend/: __init__.py  test_db_service_ssh.py  test_ssh_config_service.py  test_ssh_connection.py
tests/utils/: __init__.py  test_helpers.py
(+56 files in other folders)
